--- a/map.css
+++ b/map.css
@@ -1,8 +1,12 @@
 body {
-    background-color:#dcf5e8;
+    background-color: #e8e1d3 !important;
     font-weight:bold;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Nunito Sans' !important;
     height:100vh;
+}
+
+main {
+    padding-top:100px;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -10,8 +14,13 @@ body {
     gap:15px;
 }
 
-img {
-    width:50%;
+#submit {
+    border-radius:5px !important;
+    border:1px solid #d3d4d5 !important;
+}
+
+#submit:active {
+    border-width: 5px !important;
 }
 
 a {
@@ -32,6 +41,6 @@ header>a {
     font-size:20px;
 }
 
-#route {
+h4 {
     width:50%;
 }
